# avato-python-client-training

./: .gitignore  LICENSE  README.md  compile_proto.sh  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
avato_training/: __init__.py  classifier.py  instance.py
avato_training/proto/: benchmarking_pb2.py  csv_pb2.py  logregr_pb2.py  training_pb2.py
examples/: README.md  example.py  requirements.txt  training-demo-all-in-one.ipynb  training-demo-analyst-simple.ipynb  training-demo-analyst.ipynb  training-demo-data-owner-1-simple.ipynb  training-demo-data-owner-1.ipynb  training-demo-data-owner-2-simple.ipynb  training-demo-data-owner-2.ipynb  training-demo-dataowners.ipynb  training-demo.ipynb
examples/test-data/: participant1_data.csv  simple-dataowner2.csv
integration-tests/: Jenkinsfile.groovy
proto/: csv.proto  logregr.proto  training.proto
scripts/: publish.sh
tests/: README.md  test_complete.py  test_training-demo.py
tests/fixtures/: wine-dataowner1.csv  wine-dataowner2.csv
