[tool.poetry]
name = "avato-training"
version = "0.2.0"
description = "Python client library for the logistic regression instance of the avato platform"
authors = ["David Sturzenegger <david.sturzenegger@decentriq.ch>"]
readme = 'README.md'
repository = "https://github.com/decentriq/avato-python-client-training"
homepage = "https://github.com/decentriq/avato-python-client-training"

[tool.poetry.dependencies]
python = "^3.7"
avato = "^0.5.1"
pandas = "^1.0.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
